--- a/nginx/nuxt.diaz.ir.conf
+++ b/nginx/nuxt.diaz.ir.conf
@@ -6,11 +6,11 @@ map $sent_http_content_type $expires {
 
 server {
     listen          80;             # the port nginx is listening on
-    listen          443 ssl;
+    #listen          443 ssl;
     server_name     nuxt.diaz.ir;    # setup your domain here
 
-    ssl_certificate         /etc/nginx/certs/diaz.ir.crt;
-    ssl_certificate_key     /etc/nginx/certs/diaz.ir.key;
+    #ssl_certificate         /etc/nginx/certs/diaz.ir.crt;
+    #ssl_certificate_key     /etc/nginx/certs/diaz.ir.key;
 
     gzip            on;
     gzip_types      text/plain application/xml text/css application/javascript;
