--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,21 @@
 version: "3.9"
-services: 
+services:
+  nginx:
+    container_name: nginx
+    image: nginx:milad
+    ports:
+      - "80:80"
+    networks:
+      - nginx
   vue:
+    container_name: vue
     image: vue:milad
-    networks: 
-      - vue_nginx
-networks: 
-  vue_nginx:
-    external: true
+    networks:
+      - vue
+      - nginx
 
+networks:
+  nginx:
 
-    # docker network connect vuejs_default nginx_nginx_1
-    #docker network connect nginx_default vuejs_vue_1
+  vue:
+
