--- a/nginx/nuxt.diaz.ir.conf
+++ b/nginx/nuxt.diaz.ir.conf
@@ -26,6 +26,6 @@ server {
         proxy_set_header X-Forwarded-Proto  $scheme;
         proxy_read_timeout          1m;
         proxy_connect_timeout       1m;
-        proxy_pass                          http://172.17.0.2:3000; # set the address of the Node.js instance here
+        proxy_pass                          http://vue:3000; # set the address of the Node.js instance here
     }
 }
