--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: "3.9"
 services:
   nginx:
+    build:
+      context: .
+      target: nginx
     container_name: nginx
     image: nginx:artist
     ports:
@@ -8,6 +11,9 @@ services:
     networks:
       - nginx
   vue:
+    build:
+      context: .
+      target: vue
     container_name: vue
     image: vue:artist
     networks:
